Вёрстка 2 и 3 блока для display

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="intro__info">
                     <p class="intro__label">who we are</p>
                     <h2 class="intro__title">
-                        An award-winning design & dev team 
+                        An award-winning design & dev team
                         that is proud of our work 👋
                     </h2>
                     <div class="intro__block-text">
@@ -82,16 +82,190 @@
                         </div>
                         <div class="intro__column">
                             <p class="intro__text">
-                                Were divided, a moved night light darkness winged may 
-                                also make man for. Winged the for Earth creeping appear 
-                                evening, gathered Forth so he. Life that dry of created 
+                                Were divided, a moved night light darkness winged may
+                                also make man for. Winged the for Earth creeping appear
+                                evening, gathered Forth so he. Life that dry of created
                                 greater can't also gathered female green.
-                            </p>    
-                            <button class="intro__button">about us</button>         
+                            </p>
+                            <button class="intro__button">about us</button>
                         </div>
                     </div>
-                    <div class="intro__decor-circle">
-
+                </div>
+                <div class="intro__section-row">
+                    <div class="intro__section-column">
+                        <div class="intro__section-icon">
+                            <img src="./public/img/intro/display/cup-icon.svg" alt="Иконка раздела">
+                        </div>
+                        <h4 class="intro__section-name">Web Design and Development</h4>
+                        <p class="intro__section-read">read more</p>
+                    </div>
+                    <div class="intro__section-column">
+                        <div class="intro__section-icon">
+                            <img src="./public/img/intro/display/settings-icon.svg" alt="Иконка раздела">
+                        </div>
+                        <h4 class="intro__section-name">Brand Strategy Accelerator</h4>
+                        <p class="intro__section-read">read more</p>
+                    </div>
+                    <div class="intro__section-column">
+                        <div class="intro__section-icon">
+                            <img src="./public/img/intro/display/anchor-icon.svg" alt="Иконка раздела">
+                        </div>
+                        <h4 class="intro__section-name">Packaging and Brand Identity</h4>
+                        <p class="intro__section-read">read more</p>
+                    </div>
+                    <div class="intro__section-column">
+                        <div class="intro__section-icon">
+                            <img src="./public/img/intro/display/book-icon.svg" alt="Иконка раздела">
+                        </div>
+                        <h4 class="intro__section-name">Content Production</h4>
+                        <p class="intro__section-read">read more</p>
+                    </div>
+                </div>
+            </section>
+            <section class="project">
+                <h2 class="project__title">Our projects</h2>
+                <hr>
+                <ul class="project__types">
+                    <li class="project__types-item">
+                        <input type="radio" name="types" class="project__radio" checked>
+                        <span>all projects</span>
+                    </li>
+                    <li class="project__types-item">
+                        <input type="radio" name="types" class="project__radio">
+                        <span>branding</span>
+                    </li>
+                    <li class="project__types-item">
+                        <input type="radio" name="types" class="project__radio">
+                        <span>design</span>
+                    </li>
+                    <li class="project__types-item">
+                        <input type="radio" name="types" class="project__radio">
+                        <span>photography</span>
+                    </li>
+                    <li class="project__types-item">
+                        <input type="radio" name="types" class="project__radio">
+                        <span>marketing</span>
+                    </li>
+                </ul>
+                <div class="project__list">
+                    <div class="project__item">
+                        <div class="project__item-img">
+                            <img src="./public/img/project/display/item-1.jpg" alt="Пример проекта">
+                        </div>
+                        <div class="project__item-text">
+                            <h5 class="project__item-name">Name project</h5>
+                            <p class="project__item-type">design</p>
+                        </div>
+                    </div>
+                    <div class="project__item">
+                        <div class="project__item-img">
+                            <img src="./public/img/project/display/item-2.jpg" alt="Пример проекта">
+                        </div>
+                        <div class="project__item-text">
+                            <h5 class="project__item-name">Name project</h5>
+                            <p class="project__item-type">design</p>
+                        </div>
+                    </div>
+                    <div class="project__item">
+                        <div class="project__item-img">
+                            <img src="./public/img/project/display/item-3.jpg" alt="Пример проекта">
+                        </div>
+                        <div class="project__item-text">
+                            <h5 class="project__item-name">Name project</h5>
+                            <p class="project__item-type">design</p>
+                        </div>
+                    </div>
+                    <div class="project__item">
+                        <div class="project__item-img">
+                            <img src="./public/img/project/display/item-4.jpg" alt="Пример проекта">
+                        </div>
+                        <div class="project__item-text">
+                            <h5 class="project__item-name">Name project</h5>
+                            <p class="project__item-type">design</p>
+                        </div>
+                    </div>
+                    <div class="project__item">
+                        <div class="project__item-img">
+                            <img src="./public/img/project/display/item-5.jpg" alt="Пример проекта">
+                        </div>
+                        <div class="project__item-text">
+                            <h5 class="project__item-name">Name project</h5>
+                            <p class="project__item-type">design</p>
+                        </div>
+                    </div>
+                    <div class="project__item">
+                        <div class="project__item-img">
+                            <img src="./public/img/project/display/item-6.jpg" alt="Пример проекта">
+                        </div>
+                        <div class="project__item-text">
+                            <h5 class="project__item-name">Name project</h5>
+                            <p class="project__item-type">design</p>
+                        </div>
+                    </div>
+                    <div class="project__item">
+                        <div class="project__item-img">
+                            <img src="./public/img/project/display/item-7.jpg" alt="Пример проекта">
+                        </div>
+                        <div class="project__item-text">
+                            <h5 class="project__item-name">Name project</h5>
+                            <p class="project__item-type">design</p>
+                        </div>
+                    </div>
+                    <div class="project__item">
+                        <div class="project__item-img">
+                            <img src="./public/img/project/display/item-8.jpg" alt="Пример проекта">
+                        </div>
+                        <div class="project__item-text">
+                            <h5 class="project__item-name">Name project</h5>
+                            <p class="project__item-type">design</p>
+                        </div>
+                    </div>
+                    <div class="project__item">
+                        <div class="project__item-img">
+                            <img src="./public/img/project/display/item-9.jpg" alt="Пример проекта">
+                        </div>
+                        <div class="project__item-text">
+                            <h5 class="project__item-name">Name project</h5>
+                            <p class="project__item-type">design</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project__more">
+                    more
+                </div>
+                <div class="project__work">
+                    <h2 class="project__work-title">Work process</h2>
+                    <div class="project__work-info">
+                        <ul class="project__work-list">
+                            <li class="project__work-item">
+                                <input type="radio" name="work" class="project__work-input" checked>
+                                <span>Search an Idea</span>
+                            </li>
+                            <li class="project__work-item">
+                                <input type="radio" name="work" class="project__work-input">
+                                <span>Design</span>
+                            </li>
+                            <li class="project__work-item">
+                                <input type="radio" name="work" class="project__work-input">
+                                <span>Development</span>
+                            </li>
+                            <li class="project__work-item">
+                                <input type="radio" name="work" class="project__work-input">
+                                <span>Release</span>
+                            </li>
+                        </ul>
+                        <div class="project__work-content">
+                            <p class="project__work-text">
+                                God he their every blessed upon male earth also
+                                midst fill creeping Seas their winged can't shall
+                                signs sea mornings gathered brought, creeping
+                                fruitful you'll open there bearing.
+                            </p>
+                            <button class="project__work-button">read more</button>
+                            <div class="project__work-decor">
+                                <img src="./public/img/project/display/decor.png" alt="Элемент оформления">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
