Вёрстка 4 блока для display

--- a/index.html
+++ b/index.html
@@ -269,6 +269,155 @@
                     </div>
                 </div>
             </section>
+            <section class="values">
+                <div class="values__row-top">
+                    <div class="values__images">
+                        <div class="values__img">
+                            <img src="./public/img/values/display/image-1.jpg" alt="">
+                        </div>
+                        <div class="values__img">
+                            <img src="./public/img/values/display/image-2.jpg" alt="">
+                        </div>
+                        <div class="values__img">
+                            <img src="./public/img/values/display/image-3.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="values__right-block">
+                        <h5 class="values__name">
+                            We create everything 
+                            digital, printable and 
+                            analytical 🔥
+                        </h5>
+                        <p class="values__text">
+                            Won't seasons, appear days them stars replenish 
+                            divided. All second forth. Him place was seas man and
+                            gathering creepeth called fly. Them sea place lights, 
+                            midst bearing fourth above.
+                        </p>
+                        <button class="values__button">read more</button>
+                    </div>
+                </div>
+                <div class="values__row-center">
+                    <h2 class="values__title">Values</h2>
+                    <div class="values__list">
+                        <div class="values__column">
+                            <div class="values__list-img">
+                                <img src="./public/img/values/display/v-1.svg" alt="">
+                            </div>
+                            <div class="values__info">
+                                <h4 class="values__name">Excellent Quality</h4>
+                                <p class="values__text">
+                                    Forth forth moveth shall i unto
+                                    midst tree, a fruit great subdue
+                                    a every be so a fowl.
+                                </p>
+                                <p class="values__read">
+                                    read more
+                                </p>
+                            </div>
+                        </div>
+                        <div class="values__column">
+                            <div class="values__list-img">
+                                <img src="./public/img/values/display/v-2.svg" alt="">
+                            </div>
+                            <div class="values__info">
+                                <h4 class="values__name">Customer Service</h4>
+                                <p class="values__text">
+                                    Be saying moveth spirit fruitful 
+                                    called set evening fly give shall 
+                                    moveth lesser very.
+                                </p>
+                                <p class="values__read">
+                                    read more
+                                </p>
+                            </div>
+                        </div>
+                        <div class="values__column">
+                            <div class="values__list-img">
+                                <img src="./public/img/values/display/v-3.svg" alt="">
+                            </div>
+                            <div class="values__info">
+                                <h4 class="values__name">The best People</h4>
+                                <p class="values__text">
+                                    Heaven to bearing that yielding 
+                                    and man. Brought over shall fill 
+                                    over blessed, he appear.
+                                </p>
+                                <p class="values__read">
+                                    read more
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="values__row-bottom">
+                    <div class="values__icon">
+                        <img src="./public/img/values/display/icon.svg" alt="Элемент оформления">
+                    </div>
+                    <div class="values__swiper swiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <p class="values__quote">
+                                    “  There from stars gathering gathered, upon tree brought <br>
+                                    life fruitful shall that together without there form <br>
+                                    You make, morning he from unto.  ”
+                                </p>
+                                <p class="values__auth">Brian Newton, Unvab Inc.</p>
+                                <div class="values__line"></div>
+                            </div>
+                            <div class="swiper-slide">
+                                <p class="values__quote">
+                                    “  There from stars gathering gathered, upon tree brought <br>
+                                    life fruitful shall that together without there form <br>
+                                    You make, morning he from unto.  ”
+                                </p>
+                                <p class="values__auth">Brian Newton, Unvab Inc.</p>
+                                <div class="values__line"></div>
+                            </div>
+                            <div class="swiper-slide">
+                                <p class="values__quote">
+                                    “  There from stars gathering gathered, upon tree brought <br>
+                                    life fruitful shall that together without there form <br>
+                                    You make, morning he from unto.  ”
+                                </p>
+                                <p class="values__auth">Brian Newton, Unvab Inc.</p>
+                                <div class="values__line"></div>
+                            </div>
+                        </div>                 
+                    </div>
+                </div>
+            </section>
+            <section class="info">
+                <div class="info__clients">
+                    <div class="info__block-text">
+                        <p class="info__label">our clients</p>
+                        <h5 class="info__text">
+                            We've worked <br>
+                            with 50+ brands
+                        </h5>
+                    </div>
+                    <div class="info__logos">
+                        <div class="info__logo">
+                            <img src="./public/img/info/display/logo_1.png" alt="">
+                        </div>
+                        <div class="info__logo">
+                            <img src="./public/img/info/display/logo_2.png" alt="">
+                        </div>
+                        <div class="info__logo">
+                            <img src="./public/img/info/display/logo_3.png" alt="">
+                        </div>
+                        <div class="info__logo">
+                            <img src="./public/img/info/display/logo_4.png" alt="">
+                        </div>
+                        <div class="info__logo">
+                            <img src="./public/img/info/display/logo_5.png" alt="">
+                        </div>
+                        <div class="info__logo">
+                            <img src="./public/img/info/display/logo_6.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
 
